--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
-    "@types/mocha": "^10.0.7",
     "@types/react": "^18.3.3",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.0",
@@ -51,7 +50,8 @@
     "typescript-eslint": "^8.0.0",
     "vite": "^5.4.0",
     "vite-tsconfig-paths": "^5.0.1"
-  },"jest": {
+  },
+  "jest": {
     "testEnvironment": "jest-environment-jsdom",
     "setupFilesAfterEnv": [
       "<rootDir>/setup-tests.js"
